fix: 修复错误的好感度API引用